Fixed template rendering.